# gjc-fleet

./: .gitignore  00-overview.md  10-gajae-code.md  20-hermes-agent.md  30-clawhip.md  35-gjc-relay.md  40-gjc-bot-automation.md  40-repo-bot-automation.md  50-configuration-and-state.md  60-data-flow-and-integration.md  70-deployment-and-operations.md  90-glossary-and-open-questions.md  Cargo.toml  README.md  fleet.toml.example  prek.toml
bootstrap/: 00-prereqs.sh  10-engines.sh  20-identity.sh  30-config-homes.sh  40-secrets.sh  50-units.sh  README.md  bootstrap.sh  verify.sh
docs/: 00-overview.md  10-gajae-code.md  20-hermes-agent.md  30-clawhip.md  35-gjc-relay.md  40-gjc-bot-automation.md  45-fleet-config.md  46-github-house-style.md  47-renovate-policy.md  50-configuration-and-state.md  60-data-flow-and-integration.md  70-deployment-and-operations.md  80-reproduction-guide.md  90-glossary-and-open-questions.md  README.md  prek.toml
intake/: issue-spool-adapter.sh  issue-triage-fetch.sh
maintenance/: gjc-worktree-janitor.sh  stale-branches.sh
pipeline/: .gitignore  README.md  prek.toml
relay/: .gitignore  Cargo.toml  README.md
relay/runtime/: alert.sh  check-kind-coverage.sh  design-system.json  dlq-watch.sh  relay-health-watch.sh  relay-heartbeat.sh
relay/src/: config.rs  discord.rs  envelope.rs  flush.rs  http.rs  log.rs  main.rs  policy.rs  queue.rs  registry.rs  render.rs  store.rs
render/: render.sh
render/lib/: subst.sh  (+1 more)
review/: ai-code-review-handler-original.md  merge-gate.sh  review-detector.sh  review-run.sh
run/: gjc-reap.sh  gjc-run.sh
(+78 files in other folders)
